# stellar-agent-wallet

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  deny.toml
crates/stellar-agent-anchor/: Cargo.toml  README.md
crates/stellar-agent-anchor/src/: client.rs  error.rs  lib.rs  sep24.rs  sep6.rs  ssrf.rs
crates/stellar-agent-anchor/tests/: anchor_adversarial.rs  anchor_http_tests.rs  anchor_testnet_acceptance.rs
crates/stellar-agent-approval-remote/: Cargo.toml  README.md
crates/stellar-agent-approval-remote/src/: challenge_store.rs  config_validate.rs  lib.rs  rate_limit.rs  remote_origin.rs  routes.rs  session.rs  templates.rs  test_helpers.rs  tls.rs  verify.rs  wire.rs
crates/stellar-agent-approval-remote/tests/: operator_enroll_browser_acceptance.rs  remote_approval_browser_testnet_acceptance.rs  rule_proposal_remote_browser_testnet_acceptance.rs
crates/stellar-agent-approval-ui/: Cargo.toml  README.md
crates/stellar-agent-approval-ui/src/: auth.rs  decision.rs  error.rs  lib.rs  routes.rs  templates.rs  tests.rs  watcher.rs
crates/stellar-agent-blend/: Cargo.toml  README.md
crates/stellar-agent-blend/src/: abi.rs  adapter.rs  lib.rs  oracle.rs  oracle_fetch.rs  pins.rs  preview.rs  scval.rs  value.rs
crates/stellar-agent-blend/tests/: blend_lend_testnet_acceptance.rs  blend_supply_submit_testnet_acceptance.rs
crates/stellar-agent-claimable/: Cargo.toml  README.md
crates/stellar-agent-claimable/src/: entry.rs  error.rs  id.rs  lib.rs  predicate.rs  preview.rs
crates/stellar-agent-cli/: Cargo.toml  README.md
crates/stellar-agent-cli/src/: advisory.rs  main.rs
crates/stellar-agent-cli/tests/: advisory_no_network_deps.rs  audit_path_discipline.rs  claim_testnet_acceptance.rs  pay_policy_v1_testnet_acceptance.rs  profile_init_enroll_signer_testnet_acceptance.rs  smart_account_execute_testnet_acceptance.rs
crates/stellar-agent-core/: Cargo.toml  README.md
crates/stellar-agent-core/src/: amount.rs  constants.rs  counterparty.rs  envelope.rs  envelope_decode.rs  error.rs  hex.rs  lib.rs  protocol_consts.rs  rpc_budget.rs  timefmt.rs  wire_stroops.rs
crates/stellar-agent-core/tests/: envelope_decode_authoritative_args.rs  policy_descriptor_equivalence.rs  policy_fixtures_adversarial.rs  profile_horizon_bound_test.rs  profile_scan_id_bound_test.rs  subscriber_install_path.rs
crates/stellar-agent-defi/: Cargo.toml  README.md
crates/stellar-agent-defi/src/: adapter.rs  dispatch.rs  lib.rs  network.rs  oracle_staleness.rs  pins.rs  reflector.rs  scval.rs  simulate.rs
crates/stellar-agent-defi/tests/: value_action_emission.rs
crates/stellar-agent-defindex/: Cargo.toml  README.md
crates/stellar-agent-defindex/src/: abi.rs  adapter.rs  lib.rs  pins.rs  preview.rs  roles.rs  scval.rs  storage.rs  value.rs
crates/stellar-agent-defindex/tests/: defindex_deposit_submit_testnet_acceptance.rs  defindex_vault_testnet_acceptance.rs
crates/stellar-agent-derive/: Cargo.toml  README.md
crates/stellar-agent-derive/src/: lib.rs  slip10.rs  wallet.rs
crates/stellar-agent-derive/tests/: sep5_vectors.rs
crates/stellar-agent-dex/: Cargo.toml  README.md
crates/stellar-agent-dex/src/: abi.rs  adapter.rs  auth_guard.rs  lib.rs  pins.rs  preview.rs  quote.rs  sac.rs  scval.rs  value.rs  venue.rs
crates/stellar-agent-dex/tests/: dex_swap_testnet_acceptance.rs
crates/stellar-agent-headless-keyring/: Cargo.toml  README.md
crates/stellar-agent-headless-keyring/src/: crypto.rs  lib.rs  store.rs
crates/stellar-agent-loopback-http/: Cargo.toml  README.md
crates/stellar-agent-loopback-http/src/: host_header.rs  lib.rs  origin_header.rs  security_headers.rs
crates/stellar-agent-mcp/: Cargo.toml  README.md
crates/stellar-agent-mcp-macros/: Cargo.toml  README.md
crates/stellar-agent-mcp-macros/src/: args.rs  lib.rs
crates/stellar-agent-mcp-macros/tests/: compile_fail.rs
crates/stellar-agent-mcp/docs/: usage.md
crates/stellar-agent-mcp/src/: lib.rs  main.rs  policy_adapter.rs  resources.rs  sequence_floor.rs  server.rs  transport.rs
crates/stellar-agent-mcp/tests/: approval_attestation_indistinguishability.rs  approval_spine_integration.rs  approve_serve_testnet_acceptance.rs  balances_integration.rs  claim_commit_testnet_acceptance.rs  claim_integration.rs  create_account_commit_args_redrive_integration.rs  create_account_integration.rs  create_account_testnet_acceptance.rs  dex_quote_wire_testnet_acceptance.rs  fee_stats_integration.rs  friendbot_integration.rs  integration.rs  pay_commit_args_redrive_integration.rs  pay_commit_testnet_acceptance.rs  pay_integration.rs  policy_v1_integration.rs  policy_value_descriptor_testnet_acceptance.rs  preflight_integration.rs  registry_walk.rs  resource_no_secrets.rs  rule_create_commit_testnet_acceptance.rs  sep43_sign_and_submit_transaction_testnet_acceptance.rs  sep48_sep47_envelope_shape.rs  toolset_args_validation_integration.rs  toolset_sign_payment_gated_integration.rs  toolset_sign_payment_gated_testnet_acceptance.rs  toolsets_matrix_invariants.rs  trustline_classic_testnet_acceptance.rs  trustline_integration.rs  x402_authenticated_payment_testnet_acceptance.rs  x402_create_payment_testnet_acceptance.rs
crates/stellar-agent-mpp/: Cargo.toml
crates/stellar-agent-network/: Cargo.toml  README.md
crates/stellar-agent-nonce/: Cargo.toml  README.md
crates/stellar-agent-pool/: Cargo.toml  README.md
crates/stellar-agent-sep10/: Cargo.toml  README.md
crates/stellar-agent-sep43/: Cargo.toml  README.md
crates/stellar-agent-sep45/: Cargo.toml  README.md
crates/stellar-agent-sep48/: Cargo.toml  README.md
crates/stellar-agent-sep5/: Cargo.toml  README.md
crates/stellar-agent-sep53/: Cargo.toml  README.md
crates/stellar-agent-sep7/: Cargo.toml  README.md
crates/stellar-agent-smart-account/: Cargo.toml  README.md  build.rs
crates/stellar-agent-stablecoin/: Cargo.toml  README.md
crates/stellar-agent-test-support/: Cargo.toml  README.md
crates/stellar-agent-toolsets-install/: Cargo.toml  README.md
(+768 files in other folders)
