[package]
name = "stellar-agent-defi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "DeFi adapter substrate — contract-pin framework, typed-preview surface, and dispatch-verb seam for the Stellar agent wallet"
readme = "README.md"
keywords = ["stellar", "soroban", "defi", "wallet"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[features]
# Exposes test helper constructors and the mock adapter used by cross-crate tests.
# Never enable in production binaries.
test-helpers = []

[dependencies]
stellar-agent-core      = { workspace = true }
stellar-agent-network   = { workspace = true }
stellar-agent-xdr-limits = { workspace = true }
thiserror               = { workspace = true }
serde                   = { workspace = true }
tracing                 = { workspace = true }
async-trait             = { workspace = true }
stellar-xdr             = { workspace = true }
stellar-rpc-client      = { workspace = true }
stellar-strkey          = { workspace = true }

[dev-dependencies]
stellar-agent-test-support = { path = "../stellar-agent-test-support", features = ["test-helpers"] }
tokio                      = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock                   = { workspace = true }
serde_json                 = { workspace = true }

[lints]
workspace = true
