[package]
name = "stellar-agent-defindex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "DeFindex vault adapter for the Stellar agent wallet — ABI binding, typed preview, role disclosure, upgradable-flag guard, Blend-strategy detection"
readme = "README.md"
keywords = ["stellar", "soroban", "defindex", "vault", "defi"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[features]
# Exposes test helper constructors for cross-crate tests.
# Never enable in production binaries.
test-helpers = ["stellar-agent-defi/test-helpers"]
# Gated testnet acceptance tests. Implies test-helpers.
testnet-acceptance = ["test-helpers", "stellar-agent-test-support/testnet-helpers"]

[dependencies]
stellar-agent-core    = { workspace = true }
stellar-agent-defi    = { workspace = true }
stellar-agent-network = { workspace = true }
stellar-agent-smart-account = { workspace = true }
stellar-xdr           = { workspace = true }
stellar-strkey        = { workspace = true }
stellar-agent-xdr-limits = { workspace = true }
thiserror             = { workspace = true }
serde                 = { workspace = true }
tracing               = { workspace = true }
async-trait           = { workspace = true }
tokio                 = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
stellar-agent-test-support = { path = "../stellar-agent-test-support" }
serde_json                  = { workspace = true }
tokio                       = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
zeroize                     = { workspace = true }

[lints]
workspace = true
