[package]
name = "stellar-agent-dex"
description = "Soroswap swap adapter for the Stellar agent wallet"
readme = "README.md"
keywords = ["stellar", "soroban", "soroswap", "swap", "dex"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
stellar-agent-defi = { workspace = true }
stellar-agent-network = { workspace = true }
stellar-agent-smart-account = { workspace = true }
stellar-agent-core = { workspace = true }

async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
stellar-rpc-client = { workspace = true }
stellar-strkey = { workspace = true }
stellar-xdr = { workspace = true }

[features]
# Exposes test helper constructors for cross-crate tests.
# Never enable in production binaries.
test-helpers = []
# Gated testnet acceptance tests. Implies test-helpers.
testnet-acceptance = ["test-helpers", "stellar-agent-test-support/testnet-helpers"]

[dev-dependencies]
stellar-agent-test-support = { path = "../stellar-agent-test-support" }
stellar-agent-defi = { path = "../stellar-agent-defi", features = ["test-helpers"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
zeroize = { workspace = true }
